--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "formik": "^2.4.6",
     "react": "^18.2.0",
+    "react-auth-kit": "^3.1.3",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.24.1",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
